--- a/Notes/Immersed_Boundary_Method.tex
+++ b/Notes/Immersed_Boundary_Method.tex
@@ -1,9 +1,11 @@
 \documentclass{article}
 
-\usepackage{D:/Documents/Latex_Template/NotesTeXV3_test}
+\usepackage{D://Documents/Latex/Latex_Template/NotesTeXV3_test}
 \usepackage{subfiles}
+\usepackage{wrapfig} % Required for wrapping text around figures
+\usepackage{lipsum}  % Just for generating dummy text in this example
 
-\input{New_Commands.tex}
+\input{D://Documents/Latex/Latex_Template/Custom_Commands.tex}
 
 \special{dvipdfmx:config z 0}
 
